# file_organizer

./: .flake8  .gitignore  LICENSE  README.md  fotool.py  fotools.py  organizer.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  publish.yml
extensions/: delete.py  pcloud_upload.py  search_contents.py  testextension.py  testextension2.py  testextension_wrong.py
fotool/: extensions.py  help.py  main.py  organizer.py  parser.py
fotools/: extensions.py  help.py  main.py  organizer.py  parser.py
fotools/installed_extensions/: delete.py  search_contents.py  testextension.py  testextension2.py
tests/: test_extensions.py  test_fotool.py  test_main.py  test_organizer.py
tests/samples/reverse/: 1.txt
tests/samples/walk/: action_log
