[tool.poetry]
name = "file_organizer_tools"
version = "0.1.0"
description = "Tool for searching and organizing files"
authors = ["Matthew Wisdom <matthewwisdom11@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
fuzzywuzzy = "^0.18.0"
filetype = "^1.0.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
