[tool.poetry]
name = "file_organizer_tools"
version = "0.1.0"
description = "Tool for searching and organizing files"
authors = ["Matthew Wisdom <matthewwisdom11@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
fuzzywuzzy = "^0.18.0"
filetype = "^1.0.13"
python-Levenshtein = "^0.20.8"
bandit = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pcloud = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
