[tool.poetry]
name = "fotools"
version = "0.1.2"
description = "Tool for searching and organizing files"
authors = ["Matthew Wisdom <matthewwisdom11@gmail.com>"]
license = "BSD 3-Clause License"
packages = [
    { include = "fotools" }
]
readme = "README.md"
repository = "https://github.com/matt-wisdom/file_organizer"


[tool.poetry.dependencies]
python = "^3.9"
filetype = "^1.0.13"
python-Levenshtein = "^0.20.8"
bandit = "^1.7.4"
rapidfuzz = "^2.13.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pcloud = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fotools = 'fotools.main:main'
